RESOLVED FIXED130907
AX: AccessibilityRenderObject::ariaLiveRegionAtomic() should default to true if roleValue is ApplicationAlertRole || ApplicationStatusRole
https://bugs.webkit.org/show_bug.cgi?id=130907
Summary AX: AccessibilityRenderObject::ariaLiveRegionAtomic() should default to true ...
James Craig
Reported 2014-03-28 11:59:45 PDT
AX: AccessibilityObject::ariaLiveRegionAtomic() should default to true if roleValue() is ApplicationAlertRole || ApplicationStatusRole Obviously an explicit @aria-atomic value of "false" should override the default. http://www.w3.org/TR/wai-aria/complete#alert http://www.w3.org/TR/wai-aria/complete#status
Attachments
patch (10.82 KB, patch)
2014-03-30 00:30 PDT, James Craig
no flags
patch (10.83 KB, patch)
2014-03-30 00:32 PDT, James Craig
no flags
Radar WebKit Bug Importer
Comment 1 2014-03-28 12:00:17 PDT
James Craig
Comment 2 2014-03-30 00:30:12 PDT
WebKit Commit Bot
Comment 3 2014-03-30 00:30:51 PDT
Attachment 228122 [details] did not pass style-queue: ERROR: Source/WebCore/accessibility/AccessibilityRenderObject.cpp:3099: Missing space before ( in switch( [whitespace/parens] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
James Craig
Comment 4 2014-03-30 00:32:44 PDT
chris fleizach
Comment 5 2014-04-01 09:06:18 PDT
Comment on attachment 228123 [details] patch looking good!
WebKit Commit Bot
Comment 6 2014-04-01 09:37:11 PDT
Comment on attachment 228123 [details] patch Clearing flags on attachment: 228123 Committed r166594: <http://trac.webkit.org/changeset/166594>
WebKit Commit Bot
Comment 7 2014-04-01 09:37:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.