AX: AccessibilityRenderObject::ariaLiveRegionAtomic() should default to true if roleValue is ApplicationAlertRole || ApplicationStatusRole https://bugs.webkit.org/show_bug.cgi?id=130907

Patch by James Craig <jcraig@apple.com> on 2014-04-01
Reviewed by Chris Fleizach.

Source/WebCore:

Tests: inspector-protocol/dom/getAccessibilityPropertiesForNode_liveRegion.html:
       platform/mac/accessibility/aria-liveregions-attributes.html:

Updated AccessibilityRenderObject::ariaLiveRegionAtomic() to match ARIA spec.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::ariaLiveRegionAtomic):

LayoutTests:

Updated AccessibilityRenderObject::ariaLiveRegionAtomic() to match ARIA spec.

* inspector-protocol/dom/getAccessibilityPropertiesForNode_liveRegion-expected.txt:
* inspector-protocol/dom/getAccessibilityPropertiesForNode_liveRegion.html:
* platform/mac/accessibility/aria-liveregions-attributes-expected.txt:
* platform/mac/accessibility/aria-liveregions-attributes.html:

Canonical link: https://commits.webkit.org/149098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166594 268f45cc-cd09-0410-ab3c-d52691b4dbfc